		'tunefs.lustre --param="mdt.quota_type=ug2" $MDTDEV',
		'tunefs.lustre --param="ost.quota_type=ug2" $MDTDEV'
	  For more information, please refer to bugzilla 13904.
	* Output of lfs quota has been made less detailed by default,
	  old (verbose) output can be obtained by using -v option.
	* File join has been disabled in this release, refer to Bugzilla
	  16929.

Severity   : enhancement
Bugzilla   : 15966
Description: Re-disable certain /proc logging
Details    : Enable and disable client's offset_stats, extents_stats and
             extents_stats_per_process stats logging on the fly.

Severity   : enhancement
Bugzilla   : 16643
Description: Generic /proc file permissions
Details    : Set /Proc file permissions in a more generic way to enable non-
             root users operate on some /proc files.

Severity   : major
Bugzilla   : 16561
Description: Hitting mdc_commit_close() ASSERTION
Details    : Properly handle request reference release in
             ll_release_openhandle().

Severity   : normal
Bugzilla   : 16907
Description: Prevent import from entering FULL state when server in recovery

Severity   : major
Bugzilla   : 16750
Description: service mount cannot take device name with ":"
Details    : Only when device name contains ":/" will mount treat it as
             client mount.

Severity   : normal
Bugzilla   : 15927
Frequency  : rare
Description: replace ptlrpcd with the statahead thread to interpret the async
             statahead RPC callback

Severity   : normal
Bugzilla   : 16611
Frequency  : on recovery
Description: I/O failures after umount during fail back
Details    : if client reconnected to restarted server we need join to recovery
             instead of find server handler is changed and process self eviction
             with cancel all locks.

Severity   : enhancement
Bugzilla   : 16633
Description: Update to RHEL5 kernel-2.6.18-92.1.10.el5.

Severity   : enhancement
Bugzilla   : 16547